Remove background styles from container
Removed background styles and box shadow from the container.

--- a/index.html
+++ b/index.html
@@ -87,16 +87,13 @@
       z-index: 1;
       display: inline-block;
       margin-bottom: 1rem;
-      background: rgba(255, 255, 255, 0.95);
-      padding: 1.5rem 2rem;
-      border-radius: 20px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2), 0 0 60px rgba(90, 159, 212, 0.25);
-      border: 1px solid rgba(255, 255, 255, 0.3);
     }
     .newsletter-logo {
       max-width: 320px;
       width: 100%;
       display: block;
+      mix-blend-mode: multiply;
+      filter: brightness(1.1) contrast(1.05);
     }
     .edition-badge {
       display: inline-block;
